<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bootstrap_gray_dark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="60dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="true"
        android:text="@string/default_counter"
        android:textColor="@color/bootstrap_dropdown_divider"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/counterButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/counterButton"
        android:layout_width="121dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="displayCounter"
        android:text="@string/button_send"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/toggleSwitch"
        android:layout_width="187dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/toggle_switch"
        android:textColor="@color/bootstrap_dropdown_divider"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterButton" />

    <EditText
        android:id="@+id/inputBox"
        android:layout_width="165dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:autofillHints="String"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/bootstrap_dropdown_divider"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleSwitch" />

    <Button
        android:id="@+id/displayButton"
        android:layout_width="104dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:onClick="displayString"
        android:text="@string/display_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputBox"
        app:layout_constraintTop_toBottomOf="@+id/toggleSwitch" />

    <TextView
        android:id="@+id/displayText"
        android:layout_width="347dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/bootstrap_dropdown_divider"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleSwitch" />

    <Button
        android:id="@+id/accessBoxesButton"
        android:layout_width="347dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:onClick="goToHighlightBox"
        android:text="@string/highlight_boxes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayText" />

    <Button
        android:id="@+id/accessQRButton"
        android:layout_width="347dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="32dp"
        android:onClick="goToQRCodeGenerator"
        android:text="@string/access_qr_code_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayText" />

    <com.beardedhen.androidbootstrap.BootstrapButtonGroup
        android:id="@+id/bootstrapButtonGroup"
        android:layout_width="396dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayText"
        app:roundedCorners="true">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/firstBootstrapButton"
            android:layout_width="132dp"
            android:layout_height="match_parent"
            android:background="@color/bootstrap_brand_success"
            android:onClick="firstButton"
            android:text="@string/first_bootstrap_button"
            android:textSize="12sp" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/secondBootstrapButton"
            android:layout_width="132dp"
            android:layout_height="match_parent"
            android:onClick="secondButton"
            android:text="@string/second_bootstrap_button"
            android:textSize="12sp" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/thirdBootstrapButton"
            android:layout_width="132dp"
            android:layout_height="match_parent"
            android:onClick="thirdButton"
            android:text="@string/third_bootstrap_button"
            android:textSize="12sp" />

    </com.beardedhen.androidbootstrap.BootstrapButtonGroup>

    <TextView
        android:id="@+id/accessID"
        android:layout_width="283dp"
        android:layout_height="30dp"
        android:layout_marginTop="152dp"
        android:text="@string/access_id"
        android:textColor="@color/bootstrap_dropdown_divider"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayText" />

</android.support.constraint.ConstraintLayout>